--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^7.2.0
+  flutter_material_color_picker: ^1.1.0+2
   intl: ^0.17.0
   path: ^1.8.0
   path_provider: ^2.0.3
