--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  badges: ^2.0.1
   flutter:
     sdk: flutter
   flutter_bloc: ^7.2.0
@@ -17,6 +18,7 @@ dependencies:
   intl: ^0.17.0
   path: ^1.8.0
   path_provider: ^2.0.3
+  provider: ^6.0.0
   sqflite: ^2.0.0+4
 
 dev_dependencies:
